fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -300,12 +300,6 @@ ul {
   }
 }
 
-@media screen and (max-width: 556px) {
-  #mc-embedded-subscribe {
-    margin-left: 16em;
-  }
-}
-
 @media screen and (max-width: 540px) {
   #mc-embedded-subscribe {
     margin-left: 17em;
